変数の命名などをリファクタリング