@@ -14,10 +14,13 @@ public final class DisplayPriorityConstants {
   public static final int MEDIUM = 3;
   public static final int LOW = 4;
 
-  public static final Map<Integer, String> DISPLAY_PRIORITY_MAP = Collections
-      .unmodifiableMap(new LinkedHashMap<>(Map.ofEntries(
-          Map.entry(EMERGENCY, "緊急"),
-          Map.entry(HIGH, "大"),
-          Map.entry(MEDIUM, "中"),
-          Map.entry(LOW, "小"))));
+  public static final Map<Integer, String> DISPLAY_PRIORITY_MAP;
+  static {
+    Map<Integer, String> map = new LinkedHashMap<>();
+    map.put(EMERGENCY, "緊急");
+    map.put(HIGH, "大");
+    map.put(MEDIUM, "中");
+    map.put(LOW, "小");
+    DISPLAY_PRIORITY_MAP = Collections.unmodifiableMap(map);
+  }
 }
